--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<style>
+html, body, #fullheight {
+
+height:100%;
+
+}
+</style>
 <html lang="en">
   <head>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
