live페이지 수정

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <style>
-html, body, #fullheight {
-
-height:100%;
-
+html, body {
+  height: 100vh;
+  overflow:hidden;
 }
 </style>
 <html lang="en">
