--- a/server/rtmp.html
+++ b/server/rtmp.html
@@ -7,12 +7,12 @@
 <body>
   <!-- <video id="my_video_1" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
   data-setup='{}'>
-    <source src="rtmp://localhost/live/live" type="rtmp/flv">
+    <source src="rtmp://121.145.133.119/live/live" type="rtmp/flv">
   </video> -->
 
   <video id="my_video_2" class="video-js vjs-default-skin" controls preload="auto" width="640" height="360"
   data-setup='{}'>
-    <source src="http://localhost:8000/live/live/index.m3u8" type="application/x-mpegURL">
+    <source src="http://121.145.133.119:8000/live/live/index.m3u8" type="application/x-mpegURL">
   </video>
 
   <script src="https://unpkg.com/video.js/dist/video.js"></script>
